version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/LoadHelper.rst.txt
.. vale off



:class:`LoadHelper`
===================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.LoadHelper

   Bases: :py:obj:`object`






.. py:currentmodule:: LoadHelper

Overview
--------

.. tab-set::


   .. tab-item:: Constructors

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~SwitchAmbientTemperatureToTabular`
            - SwitchAmbientTemperatureToTabular method.
          * - :py:attr:`~SwitchFilmCoefficientToTabular`
            - SwitchFilmCoefficientToTabular method.
          * - :py:attr:`~SwitchToTabular`
            - SwitchToTabular method.


   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.












Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: SwitchAmbientTemperatureToTabular(BC: Ansys.ACT.Automation.Mechanical.BoundaryConditions.Convection) -> None
   :classmethod:


   
   SwitchAmbientTemperatureToTabular method.

   ..
       !! processed by numpydoc !!

.. py:method:: SwitchFilmCoefficientToTabular(BC: Ansys.ACT.Automation.Mechanical.BoundaryConditions.Convection) -> None
   :classmethod:


   
   SwitchFilmCoefficientToTabular method.

   ..
       !! processed by numpydoc !!

.. py:method:: SwitchToTabular(BC: Ansys.ACT.Automation.Mechanical.BoundaryConditions.GenericBoundaryCondition) -> None
   :classmethod:


   
   SwitchToTabular method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on